--- a/package.json
+++ b/package.json
@@ -13,18 +13,18 @@
     "bson": "^4.1.0",
     "connect-ensure-login": "^0.1.1",
     "connect-flash": "^0.1.1",
-    "connect-mongo": "^3.2.0",
+    "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
+    "dotenv": "^10.0.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
-    "mongodb": "^3.6.2",
-    "mongoose": "^5.10.5",
+    "graceful-fs": "^4.2.8",
+    "mongodb": "^4.2.1",
+    "mongoose": "^6.1.0",
     "morgan": "^1.9.0",
-    "node-sass-middleware": "^0.11.0",
     "nodemailer": "^6.4.11",
-    "passport": "^0.4.0",
+    "passport": "^0.5.0",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
